@@ -255,6 +255,13 @@
     <string name="setmediaclocktimer_endTimeSecondsDefault">33</string>
     <string name="setmediaclocktimer_updateMode">Update Mode</string>
 
+    <string name="diagnosticmessage_targetID">Target ID</string>
+    <string name="diagnosticmessage_targetIDDefault">42</string>
+    <string name="diagnosticmessage_messageLength">Message Length</string>
+    <string name="diagnosticmessage_messageLengthDefault">8</string>
+    <string name="diagnosticmessage_messageData">Message Data (comma-separated)</string>
+    <string name="diagnosticmessage_messageDataDefault">128,64,32,16,8,4,2,1</string>
+
     <string name="exit_dialog_title">Exit Application</string>
     <string name="app_setup_dialog_title">Please set up application properties</string>
     <string name="nsd_use_label">Network Service Discovery:</string>
